--- a/.github/workflows/main_luffy.yml
+++ b/.github/workflows/main_luffy.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          npm run project-setup
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
