--- a/.github/workflows/main_luffy.yml
+++ b/.github/workflows/main_luffy.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - luffy
+name: Build and deploy Hugo app to Azure Web App - luffy
 
 on:
   push:
@@ -16,24 +13,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
         with:
-          node-version: '20.x'
+          hugo-version: 'latest'
+          extended: true
 
-      - name: npm install, build, and test
-        run: |
-          npm run project-setup
-          npm install
-          npm run build
+      - name: Build Hugo site
+        run: hugo --minify
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./public -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: hugo-app
           path: release.zip
 
   deploy:
@@ -43,13 +38,13 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: hugo-app
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
@@ -68,4 +63,3 @@ jobs:
           app-name: 'luffy'
           slot-name: 'Production'
           package: .
-          
