--- a/.github/workflows/main_luffy.yml
+++ b/.github/workflows/main_luffy.yml
@@ -12,6 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
