--- a/.github/workflows/main_luffy.yml
+++ b/.github/workflows/main_luffy.yml
@@ -25,16 +25,19 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
-      - name: Build Hugo site
-        run: hugo --minify
+      - name: npm install, build, and test
+        run: |
+          npm run project-setup
+          npm install
+          npm run build
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./public -r
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: hugo-app
+          name: node-app
           path: release.zip
 
   deploy:
@@ -44,13 +47,13 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: hugo-app
+          name: node-app
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
@@ -69,3 +72,4 @@ jobs:
           app-name: 'luffy'
           slot-name: 'Production'
           package: .
+          
