--- a/.github/workflows/main_luffy.yml
+++ b/.github/workflows/main_luffy.yml
@@ -21,11 +21,21 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
+
+      - name: Build
+        run: |
+          npm run project-setup
+          
       - name: npm install, build, and test
         run: |
+          npm run project-setup
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
