--- a/.github/workflows/main_luffy.yml
+++ b/.github/workflows/main_luffy.yml
@@ -21,6 +21,18 @@ jobs:
         with:
           node-version: '20.x'
 
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
+      
+      - name: Build
+        run: |
+          npm run project-setup
+          npm install
+          hugo --gc --minify --templateMetrics --templateMetricsHints --forceSyncStatic
+
       - name: npm install, build, and test
         run: |
           npm install
